<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="dot">.</string>
    <string name="mul">x</string>
    <string name="plus">+</string>
    <string name="min">-</string>
    <string name="div">/</string>
    <string name="equals">=</string>
    <string name="del">DEL</string>

    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="cos_inv">cos-</string>
    <string name="sin_inv">sin-</string>
    <string name="tan_inv">tan-</string>
    <string name="exp">e</string>
    <string name="op_brac">(</string>
    <string name="cl_brac">)</string>
    <string name="sqrt">sqrt</string>

</resources>
