<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/result"
        android:textSize="@dimen/result_size"
        android:gravity="bottom|right"
        android:elevation="10dp"
        android:paddingBottom="20dp"
        android:paddingRight="@dimen/line_gap"
        android:background="@color/white"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="0dp">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/firstRow"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/gray"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="@dimen/num_size"
                android:text="@string/seven"
                android:id="@+id/button_seven"
                android:background="?attr/selectableItemBackground" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textSize="@dimen/num_size"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:text="@string/four"
                android:id="@+id/button_four"
                android:background="?attr/selectableItemBackground" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textColor="@color/white"
                android:textSize="@dimen/num_size"
                android:layout_weight="1"
                android:text="@string/one"
                android:id="@+id/button_one"
                android:background="?attr/selectableItemBackground" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textSize="@dimen/num_size"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:text="@string/dot"
                android:id="@+id/button_dot"
                android:background="@color/gray" />
        </LinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/ViewPager"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_width="0dp"/>

    </LinearLayout>

</LinearLayout>